<resources>
    <string name="app_name">Services</string>
    <string name="services">Service</string>
    <string name="foreground_service">Foreground service</string>
    <string name="intent_service">Intent Service</string>
    <string name="job_dispatcher">Job Dispatcher</string>
    <string name="job_intent_service">Job Intent Service</string>
    <string name="alarm_manager">Alarm manager</string>
    <string name="work_manager">Work Manager</string>
</resources>